package afb.astyann.codegeneration.domain;

public enum CodeLayer {
    BACKEND,
    FRONTEND,
    INFRASTRUCTURE
}
